# solo1-cli

./: .gitignore  pyproject.toml  pyproject.toml.bak  solo.nix
solo/: client.py  commands.py  dfu.py  helpers.py  hmac_secret.py  operations.py  solotool.py
solo/cli/: __init__.py  _checks.py  key.py  update.py
solo/devices/: base.py  solo_v1.py
solo/fido2/: udp_backend.py
